--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <html>
   <head>
     <title>Hello, world!</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    <script type="text/javascript" src="/js/general.js"></script>
     <script type="text/javascript">
       $(function() {
+        checkLogin();
         refreshEventList();
       });
       var interval = null;
 
+      function checkLogin() {
+        if (!$.cookie('token')) {
+          window.location.replace('/login.html');
+        } else {
+          getUser('/getuser');
+        }
+      }
       /*
        * This method is for refreshing the event list every time we add or delete an event
        */
       function refreshEventList() {
-        getJSON('/events').then(({status, data}) => {
+        getAllEventsJSON('/events').then(({status, data}) => {
           clearInterval(interval);
           $('#events').html('');      
           //Use the *data* argument to change what we see on the page.  
@@ -72,29 +83,21 @@
       }
 
       /*
-       * This method parses the new event form into a json 
-       */
-      function getNewEventJSON() {
-        var formArray = $('#new_event').serializeArray();
-        var returnArray = {};
-        for (var i = 0; i < formArray.length; i++){
-          returnArray[formArray[i]['name']] = formArray[i]['value'];
-        }
-        return returnArray;
-      }
-
-      /*
        * This method get all the events from the server as a json 
        *
        * url: server url for requesting the json 
        */
-      function getJSON(url) {
+      function getAllEventsJSON(url) {
         return new Promise((resolve, reject) => {
           let xhr = new XMLHttpRequest(); xhr.open('GET', url);
           xhr.responseType = 'json';
           xhr.onload = () => {
             if (xhr.status >= 200 && xhr.status < 300) {
-              resolve({status: xhr.status, data: xhr.response}); 
+              if (xhr.response.redirect_url !== undefined) {
+                window.location.replace(xhr.response.redirect_url);  
+              } else {
+                resolve({status: xhr.status, data: xhr.response}); 
+              }
             } else {
               reject({status: xhr.status, data: xhr.response}); 
             }
@@ -110,7 +113,10 @@
        *
        * url: server url for adding the event 
        */
-      function addEvent(url) {
+      function addEvent(url, elementId) {
+        if (!validateFormField(elementId)) {
+          return;
+        }
         return new Promise((resolve, reject) => {
           let xhr = new XMLHttpRequest(); xhr.open('POST', url);
           xhr.responseType = 'json';
@@ -126,7 +132,7 @@
           xhr.onerror = () => {
             reject({status: xhr.status, data: xhr.response}); 
           };
-          xhr.send(JSON.stringify(getNewEventJSON()));
+          xhr.send(JSON.stringify(getFormJSON(elementId)));
         });
       }
       /*
@@ -156,29 +162,101 @@
         });
       }
 
+      function logout(url) {
+        return new Promise((resolve, reject) => {
+          let xhr = new XMLHttpRequest(); xhr.open('POST', url);
+          xhr.responseType = 'json';
+          xhr.onload = () => {
+            if (xhr.status >= 200 && xhr.status < 300) {
+              if (xhr.response.redirect_url !== undefined) {
+                window.location.replace(xhr.response.redirect_url);  
+              } else {
+                alert('Status: ' + xhr.response.status + '\n');
+              }             
+            } else {
+              alert('Status: ' + xhr.response.status + '\n');
+            }
+          };
+          xhr.onerror = () => {
+            alert('Status: ' + xhr.response.status + '\n');
+          };
+          xhr.send();
+        });
+      }
+
+      function migrate(url) {
+        return new Promise((resolve, reject) => {
+          let xhr = new XMLHttpRequest(); xhr.open('POST', url);
+          xhr.responseType = 'json';
+          xhr.onload = () => {
+            if (xhr.status >= 200 && xhr.status < 300) {
+              if (xhr.response.redirect_url !== undefined) {
+                window.location.replace(xhr.response.redirect_url);  
+              } else {
+                refreshEventList();
+                alert('Status: ' + xhr.response.status + '\n');
+              }             
+            } else {
+              alert('Status: ' + xhr.response.status + '\n');
+            }
+          };
+          xhr.onerror = () => {
+            alert('Status: ' + xhr.response.status + '\n');
+          };
+          xhr.send();
+        });
+      }
+
+      function getUser(url) {
+        return new Promise((resolve, reject) => {
+          let xhr = new XMLHttpRequest(); xhr.open('POST', url);
+          xhr.responseType = 'json';
+          xhr.onload = () => {
+            if (xhr.status >= 200 && xhr.status < 300) {
+              $('#username').text(xhr.response.username);            
+            } else {
+              alert('Status: ' + xhr.response.status + '\n');
+            }
+          };
+          xhr.onerror = () => {
+            alert('Status: ' + xhr.response.status + '\n');
+          };
+          xhr.send(JSON.stringify({'token': $.cookie('token')}));
+        });
+      }
     </script>
   </head>
   <body>
-    <h1>Events</h1>
-    <form id="new_event" onsubmit="return false;">
-      <div>
-        <label>Title</label>
-        <input type="text" name="title" id="new_title"/>
+    <div class="container">
+      <div class="dropdown" id="user_menu">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+          <span id="username"></span>
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a id="logout_button" onclick="migrate('/migrate')">Migrate</a></li>
+          <li><a id="logout_button" onclick="logout('/logout')">Logout</a></li>
+        </ul>
       </div>
-      <div>
-        <label>Date</label>
-        <input type="date" name="date" id="new_date"/>
-      </div>
-      <div>
-        <label>Description</label>
-        <textarea name="content" id="new_content"></textarea>
-      </div>
-      <div>
-        <button onclick="addEvent('/event')">submit</button>
-      </div> 
-    </form>
-    <form>
-    </form>    
-    <div class="div_events" id="events"></div>
+      <h1>Events</h1>
+      <form id="new_event" onsubmit="return false;">
+        <div>
+          <label>Title</label>
+          <input type="text" name="title" id="new_title"/>
+        </div>
+        <div>
+          <label>Date</label>
+          <input type="date" name="date" id="new_date"/>
+        </div>
+        <div>
+          <label>Description</label>
+          <textarea name="content" id="new_content"></textarea>
+        </div>
+        <div>
+          <button onclick="addEvent('/event', 'new_event')">submit</button>
+        </div> 
+      </form> 
+      <div class="div_events" id="events"></div>
+    </div>
   </body>
 </html>
